--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,4 +46,4 @@ rand = "0.8.5"
 tokio = { version = "1.29.1", features = ["macros", "rt"] }
 wiremock = "0.5.19"
 serde_json = "1"
-
+linkify = "0.10.0"
