--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ serde-aux = "4"
 unicode-segmentation = "1.10.1"
 validator = "0.16"
 reqwest = { version = "0.11.18", default_features = false, features = ["json", "rustls-tls"] }
-
+rand = { version = "0.8.5", features = ["std_rng"] }
 
 [dependencies.sqlx]
 version = "0.7.1"
