--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ validator = "0.16"
 reqwest = { version = "0.11.18", default_features = false, features = ["json", "rustls-tls"] }
 rand = { version = "0.8.5", features = ["std_rng"] }
 thiserror = "1.0.44"
+anyhow = "1.0.72"
 
 [dependencies.sqlx]
 version = "0.7.1"
