--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,11 +27,12 @@ secrecy = { version = "0.8.0", features = ["serde"] }
 serde-aux = "4"
 unicode-segmentation = "1.10.1"
 validator = "0.16"
-reqwest = { version = "0.11.18", default_features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
 rand = { version = "0.8.5", features = ["std_rng"] }
 thiserror = "1.0.44"
 anyhow = "1.0.72"
 base64 = "0.21.2"
+argon2 = { version = "0.5.1", features = ["std"] }
 
 [dependencies.sqlx]
 version = "0.7.1"
