--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,10 @@ anyhow = "1.0.72"
 base64 = "0.21.2"
 argon2 = { version = "0.5.1", features = ["std"] }
 urlencoding = "2.1.3"
+htmlescape = "0.3.1"
+hmac = { version = "0.12.1", features = ["std"] }
+sha2 = "0.10.7"
+hex = "0.4.3"
 
 [dependencies.sqlx]
 version = "0.7.1"
