--- a/configurations/base.toml
+++ b/configurations/base.toml
@@ -1,5 +1,6 @@
 [application]
 port = 8078
+hmac_secret = "long-and-very-secret-random-key-needed-to-veryfy-message-integrity"
 
 [database]
 host = "localhost"
