--- a/spec.yaml
+++ b/spec.yaml
@@ -30,6 +30,9 @@ services:
       - key: APP_APPLICATION__BASE_URL
         scope: RUN_TIME
         value: ${APP_URL}
+      - key: APP_APPLICATION__HMAC_SECRET
+        scope: RUN_TIME
+        value: ${HMAC_SECRET}
 
       - key: APP_DATABASE__USERNAME
         scope: RUN_TIME
