--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ secrecy = { version = "0.8.0", features = ["serde"] }
 serde-aux = "4"
 unicode-segmentation = "1.10.1"
 validator = "0.16"
-reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls", "cookies"] }
 rand = { version = "0.8.5", features = ["std_rng"] }
 thiserror = "1.0.44"
 anyhow = "1.0.72"
