--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ htmlescape = "0.3.1"
 hmac = { version = "0.12.1", features = ["std"] }
 sha2 = "0.10.7"
 hex = "0.4.3"
+actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
 
 [dependencies.sqlx]
 version = "0.7.1"
