--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -35,6 +35,10 @@ jobs:
         # Opens tcp port 5432 on the host and service container
         ports:
           - 5432:5432
+      redis:
+        image: redis:7
+        ports:
+          - 6379:6379
     steps:
       # Downloads a copy of the code in your repository before running CI tests
       - name: Check out repository code
