--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ hmac = { version = "0.12.1", features = ["std"] }
 sha2 = "0.10.7"
 hex = "0.4.3"
 actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
+actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
 
 [dependencies.sqlx]
 version = "0.7.1"
