--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
 actix-web = "4.3.1"
 actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
+actix-web-lab = "0.19.1"
 anyhow = "1.0.72"
 argon2 = { version = "0.5.1", features = ["std"] }
 base64 = "0.21.2"
