--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,5 +69,6 @@ quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
 rand = "0.8.5"
 serde_json = "1"
+serde_urlencoded = "0.7.1"
 tokio = { version = "1.32.0", features = ["macros", "rt"] }
 wiremock = "0.5.19"
