--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,17 +11,14 @@ name = "zero2prod"
 path = "src/main.rs"
 
 [dependencies]
-actix-session = { version = "0.9.0", features = ["redis-rs-tls-session"] }
+actix-session = { version = "0.10.1", features = ["redis-session-native-tls"] }
 actix-web = "4.5.1"
-actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
-actix-web-lab = "0.20.2"
+actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
+actix-web-lab = "0.23.0"
 anyhow = "1.0.82"
 argon2 = { version = "0.5.3", features = ["std"] }
-base64 = "0.22.1"
 chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
-config = { version = "0.14.0", git = "https://github.com/mehcode/config-rs" }
-hex = "0.4.3"
-hmac = { version = "0.12.1", features = ["std"] }
+config = { version = "0.14.1", git = "https://github.com/mehcode/config-rs" }
 log = "0.4.21"
 rand = { version = "0.8.5", features = ["std_rng"] }
 reqwest = { version = "0.12.4", default-features = false, features = [
@@ -29,12 +26,11 @@ reqwest = { version = "0.12.4", default-features = false, features = [
     "rustls-tls",
     "cookies",
 ] }
-secrecy = { version = "0.8.0", features = ["serde"] }
+secrecy = { version = "0.10.3", features = ["serde"] }
 serde = { version = "1.0.200", features = ["derive"] }
 serde-aux = "4.5.0"
 serde_json = "1.0.116"
-sha2 = "0.10.8"
-thiserror = "1.0.59"
+thiserror = "2.0.4"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.40"
 tracing-actix-web = "0.7.10"
@@ -43,7 +39,7 @@ tracing-log = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
 unicode-segmentation = "1.11.0"
 uuid = { version = "1.8.0", features = ["v4", "serde"] }
-validator = "0.18.1"
+validator = "0.19.0"
 
 [dependencies.sqlx]
 default-features = false
@@ -55,12 +51,12 @@ features = [
     "migrate",
     "runtime-tokio-rustls",
 ]
-version = "0.7.4"
+version = "0.8.2"
 
 
 [dev-dependencies]
-claims = { version = "0.7" }
-fake = "2.9.2"
+claims = { version = "0.8.0" }
+fake = "3.0.1"
 linkify = "0.10.0"
 once_cell = "1.19.0"
 quickcheck = "1.0.3"
